--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	
 	  <!-- CSS: implied media=all -->
 	  <!-- CSS concatenated and minified via ant build script-->
+	  <link rel="stylesheet" href="css/ui-lightness/jquery-ui-1.8.15.custom.css">
 	  <link rel="stylesheet" href="css/style.css">
 	  <!-- end CSS-->
 	
@@ -37,28 +38,24 @@
 			<br/>
 			<span class="underlabel"><label for="latitude">Latitude</label></span>
 			<span class="underlabel"><label for="longitude">Longitude</label></span>
-		</div> 
-	
-		<div id="inputDiv" class="roundedBox">
-			<span class="inputHeader">Contestants:</span>
-			<input id="contest1" type="text" value="" /> 
-			vs
-			<input id="contest2" type="text" value="" />
 			<br/>
-			
-			<input type="button" value="Battle" onclick="battle();" />
-	</div>
-	
+			<input id="radius" type="text" value="" maxlength="5" />
+			<br/>
+			<span class="underlabel"><label for="radius">Radius (m)</label></span>
+			<input type="button" value="Find tweets" onclick="findTweets();" />
+		</div> 
 	
 		<div id="resultDiv" class="roundedBox">
 			<span class="inputHeader">Results:</span>
+			
 		</div>	
 	
 		<!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.microsoft.com/ajax/jquery.templates/beta1/jquery.tmpl.js"></script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 		<script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
-		
+		<script src="js/libs/jquery-ui-1.8.15.custom.min.js"><\/script>
 		
 		<script defer src="js/plugins.js"></script>
 		<script src="js/script.js"></script>
